[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentassert"
version = "0.1.1"
description = "Behavioral testing framework for AI agents — pytest for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kaushik Dhola" }
]
keywords = [
    "ai",
    "agents",
    "testing",
    "llm",
    "behavioral-testing",
    "langchain",
    "crewai",
    "autogen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pluggy>=1.3.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3", "langchain-core>=0.3"]
crewai = ["crewai>=0.80"]
autogen = ["pyautogen>=0.4"]
llamaindex = ["llama-index>=0.12"]
all-adapters = [
    "agentassert[langchain,crewai,autogen,llamaindex]"
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
agentassert = "agentassert.cli.main:main"

[project.urls]
Homepage = "https://github.com/kaushikdhola/agentassert"
Documentation = "https://github.com/kaushikdhola/agentassert#readme"
Repository = "https://github.com/kaushikdhola/agentassert.git"
Issues = "https://github.com/kaushikdhola/agentassert/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentassert"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
